--- a/BJ.css
+++ b/BJ.css
@@ -17,7 +17,7 @@ h1{
 button{
     font-weight: bold;
     color: rgb(0, 0, 0);
-    background-color: rgb(92, 67, 5);
+    background-color: goldenrod(92, 67, 5);
     border: none;
     size: 100px;
     border-radius: 10px;
